test/Fail/Issue4784a.agda
{-# OPTIONS --cubical-compatible --erasure #-}

postulate
  A : Set
  B : A → Set

T = (@0 x : A) → B x
